@@ -395,7 +395,7 @@ namespace Ice
 		    // Do compression.
 		    //
 		    IceInternal.BasicStream cstream = null;
-		    if(uncompressed.compress(ref cstream, IceInternal.Protocol.headerSize))
+		    if(uncompressed.compress(ref cstream, IceInternal.Protocol.headerSize, _compressionLevel))
 		    {
 			//
 			// Set compression status.
@@ -1449,6 +1449,16 @@ namespace Ice
 		}
 	    }
 
+	    _compressionLevel = _instance.properties().getPropertyAsIntWithDefault("Ice.Compression.Level", 1);
+	    if(_compressionLevel < 1)
+	    {
+		_compressionLevel = 1;
+	    }
+	    else if(_compressionLevel > 9)
+	    {
+		_compressionLevel = 9;
+	    }
+
 	    try
 	    {
 	        if(_adapter != null)
@@ -1830,7 +1840,9 @@ namespace Ice
 	
 	private int _acmTimeout;
 	private long _acmAbsoluteTimeoutMillis;
-	
+
+	private int _compressionLevel;
+
 	private int _nextRequestId;
 	private Hashtable _requests = new Hashtable();
 	private Hashtable _asyncRequests = new Hashtable();
