@@ -7,7 +7,7 @@
 //
 // **********************************************************************
 
-// Generated by makeprops.py from file `../config/PropertyNames.def', Thu Apr  7 12:39:15 2005
+// Generated by makeprops.py from file `../config/PropertyNames.def', Thu Jun  2 12:39:15 2005
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
@@ -20,6 +20,7 @@ namespace IceInternal
             @"^Ice\.ACM\.Client$",
             @"^Ice\.ACM\.Server$",
             @"^Ice\.ChangeUser$",
+            @"^Ice\.Compression\.Level$",
             @"^Ice\.Config$",
             @"^Ice\.ConnectionIdleTime$",
             @"^Ice\.Default\.Host$",
